# my-gh-app

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  launch.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: main.py
app/adapters/: __init__.py  _subprocess.py
app/adapters/ai/: _base.py  _parsing.py  _prompts.py  claude_code_adapter.py  opencode_adapter.py
app/adapters/cache/: __init__.py  json_file_cache.py
app/adapters/vcs/: __init__.py  github_cli_adapter.py
app/adapters/worktree/: __init__.py  git_worktree_adapter.py
app/domain/: __init__.py  exceptions.py  models.py
app/ports/: __init__.py  ai_provider.py  cache_port.py  vcs_port.py  worktree_port.py
app/services/: __init__.py  _diff_splitter.py  comment_service.py  fix_service.py  review_service.py
docs/superpowers/plans/: 2026-05-07-large-pr-review-split.md
docs/superpowers/specs/: 2026-05-06-large-pr-review-split-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte
tests/: conftest.py
tests/unit/: test_ai_provider_factory.py  test_base_cli_adapter.py  test_claude_code_adapter.py  test_claude_code_flag.py  test_claude_code_model_passing.py  test_comment_service.py  test_comment_threads.py  test_diff_splitter.py  test_domain.py  test_fix_service.py  test_github_cli_adapter.py  test_json_cache.py  test_provider_switching.py  test_review_service.py  test_subprocess_utils.py
(+23 files in other folders)
